fix(client): 通知のノート表示で_nowrapが効いていない問題を修正 Fix #9834

--- a/packages/frontend/src/style.scss
+++ b/packages/frontend/src/style.scss
@@ -157,9 +157,9 @@ hr {
 }
 
 ._nowrap {
-	white-space: pre;
-	word-wrap: normal; // https://codeday.me/jp/qa/20190424/690106.html
-	overflow: clip;
+	white-space: pre !important;
+	word-wrap: normal !important; // https://codeday.me/jp/qa/20190424/690106.html
+	overflow: hidden;
 	text-overflow: ellipsis;
 }
 
